[project]
name = "rx-tool"
version = "1.2.0"
description = "High-performance file search and analysis tool powered by ripgrep"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{ name = "wlame", email = "wlarne@gmail.com" }]
keywords = ["regex", "search", "ripgrep", "log-analysis", "file-search", "pattern-matching", "cli", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "fastapi>=0.118.0",
    "sh>=2.2.2",
    "uvicorn>=0.37.0",
    "click>=8.1.0",
    "prometheus-client>=0.21.0",
    "psutil>=7.1.2",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/wlame/rx-tool"
Repository = "https://github.com/wlame/rx-tool"
Issues = "https://github.com/wlame/rx-tool/issues"
Changelog = "https://github.com/wlame/rx-tool/blob/main/CHANGELOG.md"

[project.scripts]
rx = "rx.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rx"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--cov=rx",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
# Preserve quote style - don't enforce double or single quotes
quote-style = "preserve"
